[gd_scene load_steps=5 format=3 uid="uid://c71o6uqbpf4e6"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_1cdad"]
[ext_resource type="PackedScene" uid="uid://s2bql4gu20id" path="res://prefabs/bunny_man.tscn" id="3_56bpl"]
[ext_resource type="PackedScene" uid="uid://d0gsjxd8x054e" path="res://prefabs/parallax_background.tscn" id="4_6js0r"]
[ext_resource type="PackedScene" uid="uid://bty5ycjg1yyt6" path="res://prefabs/Lane.tscn" id="4_onicj"]

[node name="Node" type="Node"]
script = ExtResource("1_1cdad")

[node name="Bunny" parent="." instance=ExtResource("3_56bpl")]
z_index = 1
position = Vector2(160, 456)
collision_layer = 7
collision_mask = 1

[node name="ParallaxBackground" parent="." instance=ExtResource("4_6js0r")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="HUD"]
offset_left = 24.0
offset_top = 24.0
offset_right = 204.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 40
text = "SCORE: 0"

[node name="GameOver" type="CanvasLayer" parent="."]
process_mode = 2

[node name="Button" type="Button" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -32.0
offset_right = 160.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAY AGAIN"

[node name="Lane3" parent="." instance=ExtResource("4_onicj")]
collision_layer = 4

[node name="Lane2" parent="." instance=ExtResource("4_onicj")]
position = Vector2(0, -64)
collision_layer = 2

[node name="Lane1" parent="." instance=ExtResource("4_onicj")]
position = Vector2(0, -136)
